Bug 76120 - iframe sandbox doesn't block autofocus (IETC automatic-feature-block-autofocus-form-control)
Summary: iframe sandbox doesn't block autofocus (IETC automatic-feature-block-autofocu...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Adam Barth
URL:
Keywords:
Depends on:
Blocks: 76198
  Show dependency treegraph
 
Reported: 2012-01-11 16:32 PST by Adam Barth
Modified: 2012-01-12 12:10 PST (History)
2 users (show)

See Also:


Attachments
Patch (3.16 KB, patch)
2012-01-11 16:33 PST, Adam Barth
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Barth 2012-01-11 16:32:53 PST
iframe sandbox doesn't block autofocus (IETC automatic-feature-block-autofocus-form-control)
Comment 1 Adam Barth 2012-01-11 16:33:43 PST
Created attachment 122126 [details]
Patch
Comment 2 Eric Seidel (no email) 2012-01-11 16:36:29 PST
Comment on attachment 122126 [details]
Patch

LGTM.
Comment 3 WebKit Review Bot 2012-01-11 17:24:43 PST
Comment on attachment 122126 [details]
Patch

Clearing flags on attachment: 122126

Committed r104775: <http://trac.webkit.org/changeset/104775>
Comment 4 WebKit Review Bot 2012-01-11 17:24:48 PST
All reviewed patches have been landed.  Closing bug.