iframe sandbox doesn't block autofocus (IETC automatic-feature-block-autofocus-form-control) https://bugs.webkit.org/show_bug.cgi?id=76120

Reviewed by Eric Seidel.

Source/WebCore:

Test: fast/forms/no-autofocus-in-sandbox.html

* html/HTMLFormControlElement.cpp:
(WebCore::shouldAutofocus):
    - The HTML5 spec says that we shouldn't autofocus elements when the
      automatic features are sandboxed.

LayoutTests:

* fast/forms/no-autofocus-in-sandbox-expected.txt: Added.
* fast/forms/no-autofocus-in-sandbox.html: Added.


Canonical link: https://commits.webkit.org/92940@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104775 268f45cc-cd09-0410-ab3c-d52691b4dbfc