Source/WebCore/html/HTMLFormControlElement.cpp
@@ -139,6 +139,8 @@ static bool shouldAutofocus(HTMLFormControlElement* element)
         return false;
     if (element->document()->ignoreAutofocus())
         return false;
+    if (element->document()->isSandboxed(SandboxAutomaticFeatures))
+        return false;
     if (element->hasAutofocused())
         return false;
 
